--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
   <header>D280 Interactive Map - Davis Woodring</header>
 </head>
 <body>
+<div>
+  <div id="country-info">Country Information</div>
+  <div id="countryName">Name</div>
+  <div id="countryCapitol">Capitol</div>
+  <div id="countryRegion">Region</div>
+  <div id="countryIncome">Income Level</div>
+  <div id="countryLong">Longitude</div>
+  <div id="countryLat">Latitude</div>
+</div>
   <app-root></app-root>
 </body>
 </html>
