style the site with CSS

--- a/src/index.html
+++ b/src/index.html
@@ -524,20 +524,18 @@
   </svg>
 </div>
 <div class="column2">
-  <div id="country-info">Country Information</div>
+  <div id="country-info">Country Info:</div>
   <div id="countryName">Name</div>
   <div id="countryCapitol">Capitol</div>
   <div id="countryRegion">Region</div>
   <div id="countryIncome">Income Level</div>
   <div id="countryLong">Longitude</div>
   <div id="countryLat">Latitude</div>
-
   <form id="countryForm">
     <div>Enter Country Code Below:</div>
     <input type="text" id="countryInput" placeholder="Enter Country Code">
     <button type="submit">Submit</button>
   </form>
-
 </div>
 <script>
   const countryInfo = document.getElementById('country-info');
@@ -614,7 +612,6 @@
     console.log(info);
     console.log(infoPath);
     console.log(countryCapital);
-
   }
 </script>
 </body>
