Created Table to Display Country info, had to make a app.component.css file to get it to build correctly. Import got greyed out on app.component.ts? not sure why but everything is working still as it seems. Need to now make everything interactive

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>D280 JavaScript Programming</title>
   <base href="/">
   <link rel="stylesheet" href="app/app.component.css">
-  <header style="text-align: center">D280 Interactive Map - Davis Woodring</header>
+  <header>D280 Interactive Map - Davis Woodring</header>
 </head>
 <body>
 <app-root>
