Declared Methods for info display from API and SVG event listener, need to get click to work to send data. Also need to get 2 Letter Code button working.

--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,9 @@
 </app-root>
 </body>
 <footer>
+  <p>Data Provided by <a href="https://www.worldbank.org/en/home?_gl=1*1tzqec4*_gcl_au*MTQxMzkwNDMzMi4xNzIzNjYzMDk2">
+    World Bank API
+  </a>
+  </p>
 </footer>
 </html>
