forgot to add country name element to the table, fixed, added a link to the World Bank API website

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </app-root>
 </body>
 <footer>
-  <p>Data Provided by <a href="https://www.worldbank.org/en/home?_gl=1*1tzqec4*_gcl_au*MTQxMzkwNDMzMi4xNzIzNjYzMDk2">
+  <p>Data Provided by <a href="https://www.worldbank.org/en/home?_gl=1*1tzqec4*_gcl_au*MTQxMzkwNDMzMi4xNzIzNjYzMDk2" target ="_blank">
     World Bank API
   </a>
   </p>
