--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,8 @@
 <body>
 <app-root>
 </app-root>
+</div>
 </body>
 <footer>
-  <p>Data Provided by <a href="https://www.worldbank.org/en/home?_gl=1*1tzqec4*_gcl_au*MTQxMzkwNDMzMi4xNzIzNjYzMDk2" target ="_blank">
-    World Bank API
-  </a>
-  </p>
 </footer>
 </html>
